--- a/price.html
+++ b/price.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+     <!-- animate css -->
+     <link
+     rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+   />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -24,17 +29,18 @@
     <div class="" id="topBar">
         <div class="container">
             <div class="bar_content">
-                <div class="columnOne cols">
+                <div class="columnOne cols animate__animated animate__bounce">
                     <span class="mail"><i class="fas fa-envelope"></i> info@misdangraphics.com</span>
 
                     <span class="phn"><i class="fas fa-phone-volume"></i> +1 (502) 379-5734</span>
                 </div>
                 <div class="columnTwo cols">
                      <ul class="socialIcon">
-                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                         <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                         <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                      <li><a href="#"><i class="fab fa-facebook-f animate__animated animate__tada"></i></a></li>
+                      <li><a href="#"><i class="fab fa-twitter animate__animated animate__tada"></i></a></li>
+                      <li><a href="#"><i class="fab fa-instagram animate__animated animate__tada"></i></i></a></li>
+                      <li><a href="#"><i class="fab fa-google-plus-g animate__animated animate__tada"></i></a></li>
+                      <li><a href="#"><i class="fab fa-linkedin-in animate__animated animate__tada"></i></a></li>
                      </ul>
                      <div class="drop_user">
                          <span class="user"><i class="fas fa-user-circle"></i></span>
@@ -62,7 +68,7 @@
     <header>
       <nav class="navbar navbar-expand-xl navbar-light bg-light">
           <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                   <img src="assets/img/logo/HomePage--MISDAN-1410px.png" alt="" class="img-fluid">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +96,7 @@
                     <a class="nav-link" href="contact.html">contact us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">free trail</a>
+                    <a class="nav-link" href="contact.html">free trail</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -121,7 +127,7 @@
       <div class="container">
         <div class="row section-head">
          <div class="sec-title bar text-center">
-           <h2 class="title">pricing</h2>
+           <h2 class="title animate__animated animate__rubberBand">pricing</h2>
            <img src="assets/img/bar.png" alt="bar">
            <h3 class="sub_title">our basic Designing service charge</h3>
          </div>
@@ -420,7 +426,7 @@
           <div class="row text-center top_head">
             <div class="col-8">
               <div class="service_title">
-                <h2 class="title">Cartoon Animation</h2>
+                <h2 class="title ">Cartoon Animation</h2>
               </div>
             </div>
             <div class="col-4 ">
@@ -443,8 +449,8 @@
 
         <!-- login/sign in btns -->
         <ul id="log_sign" class="d-flex">
-          <li><a href="contact.html" class="misBtn">free quote</a></li>
-          <li><button class="misBtn">create free account</button></li>
+          <li><a href="contact.html" class="misBtn animate__animated animate__bounceIn">free quote</a></li>
+          <li><button class="misBtn animate__animated animate__bounceIn">create free account</button></li>
         </ul>
       </div>
     </section>
@@ -459,7 +465,7 @@
           </div>
           <div class="col-12 text-center">
             <h4 class="req_txt">Submit your request now !</h4>
-              <button class="misBtn">Get Started</button>
+              <a class="misBtn animate__animated animate__bounceIn" href="contact.html">Get Started</a>
           </div>
         </div>
       </div>
@@ -473,7 +479,7 @@
     <footer>
       <div class="container">
        <div class="row top">
-         <div class="col-md-3 col-6">
+         <div class="col-lg-3 col-6 mb-md-5 mb-lg-0">
            <div class="brand_logo">
              <img src="assets/img/logo/logo_2.png" alt="logo" class="img-fluid">
            </div>
@@ -483,14 +489,15 @@
              <span class="txt d-block">info@misdangraphics.com</span>
              <span class="txt d-block">Phone: 5024342541</span>
            </div>
-           <ul class="socialIcon">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+           <ul class="socialIcon pl-0">
+            <li><a href="#"><i class="fab fa-facebook-f animate__animated animate__tada"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter animate__animated animate__tada"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram animate__animated animate__tada"></i></i></a></li>
+            <li><a href="#"><i class="fab fa-google-plus-g animate__animated animate__tada"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in animate__animated animate__tada"></i></a></li>
         </ul>
          </div>
-         <div class="col-md-3 col-6 flex">
+         <div class="col-lg-3 col-6 flex ">
            <ul class="head ">
              <li class="title mb-3">Menu</li>
              <li><a href="index.html">Home</a></li>
@@ -501,18 +508,18 @@
              <li><a href="contact.html">Contact us</a></li>
            </ul>
          </div>
-         <div class="col-md-3 col-12">
-           <ul class="head">
+         <div class="col-lg-3 col-sm-6">
+           <ul class="head pl-0">
              <li class="title mb-3">Services</li>
-             <li><a href="#">image processing</a></li>
-             <li><a href="#">graphics Solution </a></li>
-             <li><a href="#">Web ui & mockups</a></li>
-             <li><a href="#">web design & development</a></li>
-             <li><a href="#">Video Processing</a></li>
+             <li><a href="service.html#imageProcessing">image processing</a></li>
+             <li><a href="service.html#GraphicsSolution">graphics Solution </a></li>
+             <li><a href="service.html#webUI">Web ui & mockups</a></li>
+             <li><a href="service.html#webUI">web design & development</a></li>
+             <li><a href="service.html#VideoProcessing">Video Processing</a></li>
            </ul>
            <div class="head my-3">
              <div class="title mb-4">We Accept</div>
-             <ul class="payment_system">
+             <ul class="payment_system pl-0">
                <li><a href="#"><img src="assets/img/card/paypal.png" alt="paypal"></a></li>
                <li><a href="#"><img src="assets/img/card/dollar.png" alt="dollar"></a></li>
                <li><a href="#"><img src="assets/img/card/zelle.png" alt="zelle"></a></li>
@@ -520,14 +527,14 @@
              </ul>
            </div>
          </div>
-         <div class="col-md-3 col-12 my-5 my-sm-0 flex">
+         <div class="col-lg-3 col-sm-6 my-5 my-sm-0 flex">
            <div class="head">
              <div class="title mb-3">Newsletter</div>
 
              <div class="input_grp">
                <input type="text" id="name" placeholder="Your Name">
                <input type="email" name="email" id="email" placeholder="Your Mail">
-               <button type="submit" class="d-block misBtn">Subscribe</button>
+               <button type="submit" class="d-block misBtn animate__animated animate__bounceIn">Subscribe</button>
              </div>
            </div>
          </div>
@@ -547,6 +554,7 @@
       </div>
     </footer>
     <!-- footer section end -->
+
 
     <!-- Script tage goes here -->
     <!-- <script src="assets/js/jquery-3.5.1.slim.min.js"></script> -->
